--- a/posts/03-光.md
+++ b/posts/03-光.md
@@ -18,7 +18,7 @@
 
 本文主要讲的是关于"The Cold Start Problem"。
 
-**3.内容输出的作品如何寻找好的商业模式？**
+**3.让GPT来参与产品经理面试**
 
 [https://www.yuque.com/shuijian/bizxko/lkuidkintqq3rbvc](https://www.yuque.com/shuijian/bizxko/lkuidkintqq3rbvc)  
 
