--- a/src/pages/posts/02-猛男色.md
+++ b/src/pages/posts/02-猛男色.md
@@ -1,3 +1,11 @@
+---
+layout: ../../layouts/post.astro
+title: Astro 简介
+author: Himanshu
+desc: 发现 Astro 的魅力所在！
+pic: https://pmfeeds.bearman.xyz/weekly/02/02-cover.jpeg
+--- 
+
 <img src="https://pmfeeds.bearman.xyz/weekly/02/02-cover.jpeg" width="900"/>  
 
 <small>图片摄于街头，这么可爱的颜色，车主一定是个猛男吧。</small>  
