--- a/src/pages/posts/03-光.md
+++ b/src/pages/posts/03-光.md
@@ -1,3 +1,11 @@
+---
+layout: ../../layouts/post.astro
+title: Astro 简介
+author: Himanshu
+desc: 发现 Astro 的魅力所在！
+pic: https://pmfeeds.bearman.xyz/weekly/03/03-cover.jpg
+--- 
+
 <img src="https://pmfeeds.bearman.xyz/weekly/03/03-cover.jpg" width="900"/>  
 
 <small>图片摄于市郊下午，光终将穿透阴霾，照亮你的内心。</small>
