--- a/src/pages/posts/04-贯穿骑士.md
+++ b/src/pages/posts/04-贯穿骑士.md
@@ -1,3 +1,11 @@
+---
+layout: ../../layouts/post.astro
+title: Astro 简介
+author: Himanshu
+desc: 发现 Astro 的魅力所在！
+pic: https://pmfeeds.bearman.xyz/weekly/04/04-cover.jpg
+--- 
+
 <img src="https://pmfeeds.bearman.xyz/weekly/04/04-cover.jpg" width="900"/>  
 
 <small>图片截于《恶魔之魂》重制版，是贯穿骑士套装的实际上身效果。这是宫崎英高作为制作人的第一部作品，也是魂系列中恶意最满的作品。我花了接近80个小时拿到了这套隐藏的套装，挺酷吧！</small>
