--- a/src/pages/posts/02-猛男色.md
+++ b/src/pages/posts/02-猛男色.md
@@ -2,11 +2,12 @@
 layout: ../../layouts/post.astro
 title: Astro 简介
 author: Himanshu
-desc: 发现 Astro 的魅力所在！
-pic: https://pmfeeds.bearman.xyz/weekly/02/02-cover.jpeg
+desc: 图片摄于街头，这么可爱的颜色，车主一定是个猛男吧。
+pic: https://pmfeeds.bearman.xyz/weekly/02/02-cover.jpg
+date: 2023/06/01
 --- 
 
-<img src="https://pmfeeds.bearman.xyz/weekly/02/02-cover.jpeg" width="900"/>  
+<img src="https://pmfeeds.bearman.xyz/weekly/02/02-cover.jpg" width="800"/>  
 
 <small>图片摄于街头，这么可爱的颜色，车主一定是个猛男吧。</small>  
 
@@ -15,15 +16,21 @@ pic: https://pmfeeds.bearman.xyz/weekly/02/02-cover.jpeg
 ## 产品思维  
 
 **1.广告归因模型分析**  
+
 <https://zhuanlan.zhihu.com/p/350792160>  
+
 文章是讲的转化的产生到底应该被计算在哪个渠道上，通过一系列的方法来帮助更好的做好广告投放。What‘s More？这种计算的方法本质上是在标准或者公式化一些复杂的逻辑，背后的思维是具有一定的普适性的。  
 
 **2.如何面对项目管理中的“熵”？**  
+
 <https://ipma.world/entropy-and-project-management-2/>  
+
 稍微和产品的主题偏离了一些，但总体上还是在产品经理日常工作中都会碰到的。我们往往在接手或者参与大型项目的时候都会面临项目管理的无序等问题。譬如我曾经工作的公司想做一个智能化推送的工具，至今3年了，方案讨论了无数遍，但是项目迟迟都不能落地。这或多或少都反映了项目管理中的混乱问题。那么作为管理者或者参与者，如何去面对项目管理中的“熵”？这篇文章只是个引导，并不是最终的答案。  
 
 **3.内容输出的作品如何寻找好的商业模式？**  
+
 <https://36kr.com/p/1587424375507465>  
+
 这是一个很老的话题了，内容输出到底有没有好的商业模式？无论是内容创作者，内容社区，都面临着这样的问题？我有了好的作品，我有了稳定的流量，那么我怎么变现？目前大家熟知的主要商业模式无非几种：  
 A. 创作者通过提升内容创作的速度，来持续保证流量，从而进一步与平台进行流量的价格分成；  
 B. 创作者与平台，引入付费内容（订阅模式），从而实现商业化；  
@@ -34,39 +41,56 @@ D. 广告投放（youtube premium），付费去广告模式；
 ## 设计  
 
 **1.PDD的骚操作**  
+
 PDD商家为了增加点击率，在苹果主图上加了根头发。PDD商家为了点击率完全与“美”背道而驰，主打的就是简单粗暴，红字黄底、醒目的标语，像极了电线杆上贴的一个个小广告。但在PDD这个产品中，这种的设计往往是最简单有效的。    
-<img src="https://pmfeeds.bearman.xyz/weekly/02/02-design-1-pdd.png" width="600"/>  
+
+<img src="https://pmfeeds.bearman.xyz/weekly/02/02-design-1-pdd.png"  width="800"/>  
+
 
 **2.StableDiffusion - 入门简介**  
 <https://www.yuque.com/jianxu/aigc/iko4o40l5vag95ct>  
+
 这篇入门简介讲的比较详细了，看完基本就可以入门画赛博老婆了。  
-<img src="https://pmfeeds.bearman.xyz/weekly/02/02-design-2-sd.png" width="600"/>  
+
+<img src="https://pmfeeds.bearman.xyz/weekly/02/02-design-2-sd.png"  width="800"/>  
 
 **3.iOS闹钟 Redesign**  
+
 用太阳变化更直观的展示时间  
-<img src="https://pmfeeds.bearman.xyz/weekly/02/02-design-3-iOSclock.png" width="600"/>  
+
+<img src="https://pmfeeds.bearman.xyz/weekly/02/02-design-3-iOSclock.png"  width="800"/>  
 
 ## 技术前沿  
 
 **1.Messenger Desktop: Faster and Smaller by moving to React Native from Electron**  
+
 <https://developers.facebook.com/blog/post/2023/05/17/messenger-desktop-faster-and-smaller-by-moving-to-react-native-from-electron/>  
+
 选择这篇文章很单纯的是因为Electron这个词，因为前段时间才和同事聊过，我本质上并不是很认可这种浏览器打包的工具，当然我不否认它的便利性（跨平台，write once use anywhere）。性能/体积（当然随着设备性能的上升这些会被掩盖），但是Web套壳工具的另一大问题就是对工程师本身素质的考量（前端门槛太低了）。所以会有团队选择逆向吧。不过就目前的互联网生态，可能大家最后都会选择Electron。VScode是个特例，并不是所有的软件都能做成这样的。  
 
 **2.左耳朵耗子的话**  
 <https://mp.weixin.qq.com/s/bOnW8gDJ-dXp4KbAjhDw9A>  
+
 不是用来消费情怀的，里面有两段我特别有感触：“技术不是用来写CRUD的”以及“基础知识的意义”。现在的风气浮躁到是个人都可以跟你讲技术，讲开发，我还碰见过明明是从事化妆品行业的人对信息泄漏的事情说的有鼻子有眼“体验多好啊”。
 
 **3. This blog is hosted on my Android phone**  
+
 <https://androidblog.a.pinggy.io/>  
+
 废旧手机新用处，搭个简单的服务器？当然，基于Termux可以做一些其他的用途，并不仅仅是博客。  
 
 ## 顺手工具  
 
 **1.美叶上线Midjourney咒语频道**  
+
 <https://www.meiye.art/midjourney>  
+
 目前内容还不是很多，还是以二次元/模特为主，可以持续关注下，毕竟这个是免费的。  
 
 **2.一键为图片生成动感3D特效**  
+
 <https://convert.leiapix.com/>  
-使用Leipix Converter一键为图片生成动感3D特效，只需登录后上传图片即可，还能对动画效果和深度图细节进行调整。完成后可以下载mp4视频文件。
-<img src="https://pmfeeds.bearman.xyz/weekly/02/02-tools-2-leapix.png" width="600"/>   
+
+使用Leipix Converter一键为图片生成动感3D特效，只需登录后上传图片即可，还能对动画效果和深度图细节进行调整。完成后可以下载mp4视频文件。  
+
+<img src="https://pmfeeds.bearman.xyz/weekly/02/02-tools-2-leapix.png"/>   
