--- a/src/pages/posts/01-888.md
+++ b/src/pages/posts/01-888.md
@@ -1,10 +1,11 @@
 ---
 layout: ../../layouts/post.astro
-title: Astro 简介
-author: Himanshu
 desc: 图片是点单编号，给自己一个不错的心理暗示吧，下次争取再摇个666！
 pic: https://pmfeeds.bearman.xyz/weekly/01/01-cover.jpg
-date: 2023/06/01
+date: 2023/05/22
+next_page: 02-猛男色
+last_page: false
+title: 01-888
 ---
 <img src="https://pmfeeds.bearman.xyz/weekly/01/01-cover.jpg" width="800"/>
 
@@ -14,76 +15,75 @@ date: 2023/06/01
 
 ## 产品思维
 
-**1.你怎么看“蔚来”的换电模式？**  
+**1.你怎么看“蔚来”的换电模式？**
 
-[https://www.zhihu.com/question/444218988](https://www.zhihu.com/question/444218988)  
+[https://www.zhihu.com/question/444218988](https://www.zhihu.com/question/444218988)
 
-新能源车应该是这几年比较热门的领域了。那么蔚来的这种换电模式能不能跑通呢？个人观点，“蔚来”离成功可能还有相当长的一段路要走。  
-2023年的今天，不少的汽车都支持了快充模式（45分钟左右冲一下大概跑个300公里左右），换电的时间优势被削弱不少；同时更换的电池质量品控等也是需要考虑的。所以这种模式一定是重资产模式吗（分布合理的电站建设）？如何在重资产模式和盈利之间做到平衡，同时又培养起用户习惯？  
+新能源车应该是这几年比较热门的领域了。那么蔚来的这种换电模式能不能跑通呢？个人观点，“蔚来”离成功可能还有相当长的一段路要走。
+2023年的今天，不少的汽车都支持了快充模式（45分钟左右冲一下大概跑个300公里左右），换电的时间优势被削弱不少；同时更换的电池质量品控等也是需要考虑的。所以这种模式一定是重资产模式吗（分布合理的电站建设）？如何在重资产模式和盈利之间做到平衡，同时又培养起用户习惯？
 如果真的走成了，相信对“蔚来”是一个重大的利好吧。你咋看呢？
 
-**2.怎么看“重制版”游戏热潮？**  
+**2.怎么看“重制版”游戏热潮？**
 
-从2020年左右开始，各种重制版游戏的热潮就刮起来了直到23年了，这股风似乎还是没有要停下来的意思。无论是网游层面的怀旧服（魔兽世界），高清画质补丁（各类Remastered）以及剧情/战斗系统大幅改动的Remake版本，各大主流厂商都在疯狂的推出经典IP的重制版本。个人观点，找经典游戏复刻确实是在当前恶劣的经济环境下比较稳妥的经营策略，毕竟经典IP有稳定的受众，能唤起大家经典回忆，同时可以通过整合资源来降低研发成本，剧情上也不需要耗费大量人力物力来重新设计游戏脚本。可能我们还会看到越来越多的游戏被复刻吧。你咋看呢？  
+从2020年左右开始，各种重制版游戏的热潮就刮起来了直到23年了，这股风似乎还是没有要停下来的意思。无论是网游层面的怀旧服（魔兽世界），高清画质补丁（各类Remastered）以及剧情/战斗系统大幅改动的Remake版本，各大主流厂商都在疯狂的推出经典IP的重制版本。个人观点，找经典游戏复刻确实是在当前恶劣的经济环境下比较稳妥的经营策略，毕竟经典IP有稳定的受众，能唤起大家经典回忆，同时可以通过整合资源来降低研发成本，剧情上也不需要耗费大量人力物力来重新设计游戏脚本。可能我们还会看到越来越多的游戏被复刻吧。你咋看呢？
 
-<img src="https://pmfeeds.bearman.xyz/weekly/01/01-pd-2-remake.jpg"/>  
+<img src="https://pmfeeds.bearman.xyz/weekly/01/01-pd-2-remake.jpg"/>
 
-**3.你画高保真原型吗？**  
+**3.你画高保真原型吗？**
 
-[https://www.yuque.com/moyuxuan-j2egv/tmgpnt/ph6g83dfz4ibg7m2](https://www.yuque.com/moyuxuan-j2egv/tmgpnt/ph6g83dfz4ibg7m2)  
+[https://www.yuque.com/moyuxuan-j2egv/tmgpnt/ph6g83dfz4ibg7m2](https://www.yuque.com/moyuxuan-j2egv/tmgpnt/ph6g83dfz4ibg7m2)
 
-文章是主要介绍Figma这个软件，可以参考下，然而这个问题是来源于近期和几位设计师的一些交流，有人认为这样可以提升交付的效率，也有人认为这种做法会压缩设计师的发挥空间。在技术发展的今天，岗位与角色的边界可能也会越发的模糊吧？  
-
+文章是主要介绍Figma这个软件，可以参考下，然而这个问题是来源于近期和几位设计师的一些交流，有人认为这样可以提升交付的效率，也有人认为这种做法会压缩设计师的发挥空间。在技术发展的今天，岗位与角色的边界可能也会越发的模糊吧？
 
 ## 设计
 
-**1.弹窗和滑动的集合**  
+**1.弹窗和滑动的集合**
 
-[https://twitter.com/kasper_lahti/status/1655472574350893058?s=20](https://twitter.com/kasper_lahti/status/1655472574350893058?s=20)  
+[https://twitter.com/kasper_lahti/status/1655472574350893058?s=20](https://twitter.com/kasper_lahti/status/1655472574350893058?s=20)
 
-<img src="https://pmfeeds.bearman.xyz/weekly/01/01-design-1-dialog%26button.gif" width="800"/>  
+<img src="https://pmfeeds.bearman.xyz/weekly/01/01-design-1-dialog%26button.gif" width="800"/>
 
-**2.来自Figma的官方设计教程**  
+**2.来自Figma的官方设计教程**
 
-[https://www.figma.com/resource-library/design-basics/](https://www.figma.com/resource-library/design-basics/)  
+[https://www.figma.com/resource-library/design-basics/](https://www.figma.com/resource-library/design-basics/)
 
-<img src="https://pmfeeds.bearman.xyz/weekly/01/01-design-2-FigmaCourse.png" width="800"/>  
+<img src="https://pmfeeds.bearman.xyz/weekly/01/01-design-2-FigmaCourse.png" width="800"/>
 
-**3.如何做出好的UI/UX**  
+**3.如何做出好的UI/UX**
 
-[https://www.youtube.com/watch?v=QePKvqLIsP0](https://www.youtube.com/watch?v=QePKvqLIsP0)  
+[https://www.youtube.com/watch?v=QePKvqLIsP0](https://www.youtube.com/watch?v=QePKvqLIsP0)
 
-<img src="https://pmfeeds.bearman.xyz/weekly/01/01-design-3-HowtoCreatGoodUI.png" width="800"/>  
+<img src="https://pmfeeds.bearman.xyz/weekly/01/01-design-3-HowtoCreatGoodUI.png" width="800"/>
 
 ## 技术前沿
 
-**1.ChatGPT Prompt Engineering for Developers**  
+**1.ChatGPT Prompt Engineering for Developers**
 
-[https://www.deeplearning.ai/short-courses/chatgpt-prompt-engineering-for-developers/](https://www.deeplearning.ai/short-courses/chatgpt-prompt-engineering-for-developers/)  
+[https://www.deeplearning.ai/short-courses/chatgpt-prompt-engineering-for-developers/](https://www.deeplearning.ai/short-courses/chatgpt-prompt-engineering-for-developers/)
 
-AIGC的今天，面向工程师的ChatGPT的用法值得学习。  
+AIGC的今天，面向工程师的ChatGPT的用法值得学习。
 
-**2.快速上手Dokcer**  
+**2.快速上手Dokcer**
 
-[https://www.yuque.com/serviceup/docker-hands-on](https://www.yuque.com/serviceup/docker-hands-on)  
+[https://www.yuque.com/serviceup/docker-hands-on](https://www.yuque.com/serviceup/docker-hands-on)
 
-Docker的技术到现在还是好用的，这本小册子值得收藏（面向初学者）。  
+Docker的技术到现在还是好用的，这本小册子值得收藏（面向初学者）。
 
 ## 顺手工具
 
-**1.CSS自动生成**  
+**1.CSS自动生成**
 
-[https://www.tailwindcss.cn/](https://www.tailwindcss.cn/)  
+[https://www.tailwindcss.cn/](https://www.tailwindcss.cn/)
 
-对于简单的设计交互来说，这个工具是一个提升交付效率的不错的解决方案。  
+对于简单的设计交互来说，这个工具是一个提升交付效率的不错的解决方案。
 
-**2.机模工具**  
-[https://shots.so/](https://shots.so/)  
+**2.机模工具**
+[https://shots.so/](https://shots.so/)
 
-是不是有大量的PPT材料中会涉及到产品截图？这个网站可以帮你把截图的逼格提升至少1个档次。  
+是不是有大量的PPT材料中会涉及到产品截图？这个网站可以帮你把截图的逼格提升至少1个档次。
 
-**3.AI帮个忙**  
+**3.AI帮个忙**
 
-[https://aibang.run/](https://aibang.run/)  
+[https://aibang.run/](https://aibang.run/)
 
-我用的最多的就是拿这个来写周报，目前免费的还是比较好用的，减少一点输出垃圾文字的时间也是提升效率的方式嘛。  
+我用的最多的就是拿这个来写周报，目前免费的还是比较好用的，减少一点输出垃圾文字的时间也是提升效率的方式嘛。
