--- a/src/pages/posts/02-猛男色.md
+++ b/src/pages/posts/02-猛男色.md
@@ -1,10 +1,11 @@
 ---
 layout: ../../layouts/post.astro
-title: Astro 简介
-author: Himanshu
 desc: 图片摄于街头，这么可爱的颜色，车主一定是个猛男吧。
 pic: https://pmfeeds.bearman.xyz/weekly/02/02-cover.jpg
-date: 2023/06/01
+date: 2023/05/29
+next_page: 03-光
+last_page: 01-888
+title: 02-猛男色
 --- 
 
 <img src="https://pmfeeds.bearman.xyz/weekly/02/02-cover.jpg" width="800"/>  
