--- a/src/pages/posts/03-光.md
+++ b/src/pages/posts/03-光.md
@@ -1,10 +1,11 @@
 ---
 layout: ../../layouts/post.astro
-title: Astro 简介
-author: Himanshu
 desc: 图片摄于市郊下午，光终将穿透阴霾，照亮你的内心!
 pic: https://pmfeeds.bearman.xyz/weekly/03/03-cover.jpg
-date: 2023/06/01
+date: 2023/06/05
+next_page: 04-贯穿骑士
+last_page: 02-猛男色
+title: 03-光
 ---
 <img src="https://pmfeeds.bearman.xyz/weekly/03/03-cover.jpg" width="900"/>
 
@@ -52,10 +53,10 @@ date: 2023/06/01
 
 **3.设计师AI助手插件**
 
-UX/UI Copilot
-[https://www.figma.com/community/plugin/1240872486199060370](https://www.figma.com/community/plugin/1240872486199060370)
-PRD AI 生成助手
-[https://www.figma.com/community/plugin/1242756783940492621/PRD-AI-%E7%94%9F%E6%88%90%E5%8A%A9%E6%89%8B](https://www.figma.com/community/plugin/1242756783940492621/PRD-AI-%E7%94%9F%E6%88%90%E5%8A%A9%E6%89%8B)
+UX/UI Copilot  
+[https://www.figma.com/community/plugin/1240872486199060370](https://www.figma.com/community/plugin/1240872486199060370)  
+PRD AI 生成助手  
+[https://www.figma.com/community/plugin/1242756783940492621/PRD-AI-%E7%94%9F%E6%88%90%E5%8A%A9%E6%89%8B](https://www.figma.com/community/plugin/1242756783940492621/PRD-AI-%E7%94%9F%E6%88%90%E5%8A%A9%E6%89%8B)  
 
 <img src="https://pmfeeds.bearman.xyz/weekly/03/03-design-3-AIGC.png" width="900"/>
 
