--- a/src/pages/posts/06-躺平.md
+++ b/src/pages/posts/06-躺平.md
@@ -3,7 +3,7 @@ layout: ../../layouts/post.astro
 desc: 图片是朋友摄于gentle monster店里，这是一家致力于高端试验的眼镜店。图片挺猎奇的（选来做封面也主要是猎奇吧），不过这种艺术的“美感”确实也比较难GET。     
 pic: https://pmfeeds.bearman.xyz/weekly/06/06-cover.jpg
 date: 2023/06/26
-next_page: false
+next_page: 07-星空
 last_page: 05-Star of Lucis
 title: 06-躺平
 ---
