--- a/src/pages/posts/07-星空.md
+++ b/src/pages/posts/07-星空.md
@@ -1,7 +1,7 @@
 ---
 layout: ../../layouts/post.astro
 desc: 图片微软最新游戏《星空》的宣传图，最近才稍微有点时间去补了下发布会，游戏挺不错的，感觉可以预定年度最佳游戏了，可惜我没有xbox呀。    
-pic: https://pmfeeds.bearman.xyz/weekly/07/07-cover.jpg
+pic: https://pmfeeds.bearman.xyz/weekly/07/07-cover.png
 date: 2023/07/03
 next_page: false
 last_page: 06-躺平
