update image compress

--- a/src/pages/posts/01-888.md
+++ b/src/pages/posts/01-888.md
@@ -1,13 +1,13 @@
 ---
 layout: ../../layouts/post.astro
 desc: 图片是点单编号，给自己一个不错的心理暗示吧，下次争取再摇个666！
-pic: https://pmfeeds.bearman.xyz/weekly/01/01-cover.jpg
+pic: https://pmfeeds.bearman.xyz/weekly/01/01-cover.jpg?imageView2/0/format/webp/interlace/1/q/75
 date: 2023/05/22
 next_page: 02-猛男色
 last_page: false
 title: 01-888
 ---
-<img src="https://pmfeeds.bearman.xyz/weekly/01/01-cover.jpg" width="800"/>
+<img src="https://pmfeeds.bearman.xyz/weekly/01/01-cover.jpg?imageView2/0/format/webp/interlace/1/q/75" width="900"/>
 
 <small>图片是点单编号，给自己一个不错的心理暗示吧，下次争取再摇个666！</small>
 
@@ -27,7 +27,7 @@ title: 01-888
 
 从2020年左右开始，各种重制版游戏的热潮就刮起来了直到23年了，这股风似乎还是没有要停下来的意思。无论是网游层面的怀旧服（魔兽世界），高清画质补丁（各类Remastered）以及剧情/战斗系统大幅改动的Remake版本，各大主流厂商都在疯狂的推出经典IP的重制版本。个人观点，找经典游戏复刻确实是在当前恶劣的经济环境下比较稳妥的经营策略，毕竟经典IP有稳定的受众，能唤起大家经典回忆，同时可以通过整合资源来降低研发成本，剧情上也不需要耗费大量人力物力来重新设计游戏脚本。可能我们还会看到越来越多的游戏被复刻吧。你咋看呢？
 
-<img src="https://pmfeeds.bearman.xyz/weekly/01/01-pd-2-remake.jpg"/>
+<img src="https://pmfeeds.bearman.xyz/weekly/01/01-pd-2-remake.jpg?imageView2/0/format/webp/interlace/1/q/75" width="900"/>
 
 **3.你画高保真原型吗？**
 
@@ -41,19 +41,20 @@ title: 01-888
 
 [https://twitter.com/kasper_lahti/status/1655472574350893058?s=20](https://twitter.com/kasper_lahti/status/1655472574350893058?s=20)
 
-<img src="https://pmfeeds.bearman.xyz/weekly/01/01-design-1-dialog%26button.gif" width="800"/>
+<img src="https://pmfeeds.bearman.xyz/weekly/01/01-design-1-dialog%26button.gif?imageView2/0/format/webp/interlace/1/q/75" width="900"/>
 
 **2.来自Figma的官方设计教程**
 
 [https://www.figma.com/resource-library/design-basics/](https://www.figma.com/resource-library/design-basics/)
 
-<img src="https://pmfeeds.bearman.xyz/weekly/01/01-design-2-FigmaCourse.png" width="800"/>
+<img src="https://pmfeeds.bearman.xyz/weekly/01/01-design-2-FigmaCourse.png?imageView2/0/format/webp/interlace/1/q/75
+" width="800"/>
 
 **3.如何做出好的UI/UX**
 
 [https://www.youtube.com/watch?v=QePKvqLIsP0](https://www.youtube.com/watch?v=QePKvqLIsP0)
 
-<img src="https://pmfeeds.bearman.xyz/weekly/01/01-design-3-HowtoCreatGoodUI.png" width="800"/>
+<img src="https://pmfeeds.bearman.xyz/weekly/01/01-design-3-HowtoCreatGoodUI.png?imageView2/0/format/webp/interlace/1/q/75" width="900"/>
 
 ## 技术前沿
 
