--- a/src/pages/posts/06-躺平.md
+++ b/src/pages/posts/06-躺平.md
@@ -1,13 +1,13 @@
 ---
 layout: ../../layouts/post.astro
 desc: 图片是朋友摄于gentle monster店里，这是一家致力于高端试验的眼镜店。图片挺猎奇的（选来做封面也主要是猎奇吧），不过这种艺术的“美感”确实也比较难GET。     
-pic: https://pmfeeds.bearman.xyz/weekly/06/06-cover.jpg
+pic: https://pmfeeds.bearman.xyz/weekly/06/06-cover.jpg?imageView2/0/format/webp/interlace/1/q/75
 date: 2023/06/26
 next_page: 07-星空
 last_page: 05-Star of Lucis
 title: 06-躺平
 ---
-<img src="https://pmfeeds.bearman.xyz/weekly/06/06-cover.jpg" width="900"/>
+<img src="https://pmfeeds.bearman.xyz/weekly/06/06-cover.jpg?imageView2/0/format/webp/interlace/1/q/75" width="900"/>
 
 <small>图片是朋友摄于gentle monster店里，这是一家致力于高端试验的眼镜店。图片挺猎奇的（选来做封面也主要是猎奇吧），不过这种艺术的“美感”确实也比较难GET。</small>
 
@@ -33,7 +33,7 @@ title: 06-躺平
 
 来自Codecademy前增长团队负责人的观点。在产品成长初期建立起基本的盈利系统会带来巨大的影响。简单来说，那些注册却没有及早盈利的用户很可能永远离开，因此建立一个坚实的基础会带来巨大的回报。    
 
-<img src="https://pmfeeds.bearman.xyz/weekly/06/06-products-3-Monetization.jpg" width="900"/>
+<img src="https://pmfeeds.bearman.xyz/weekly/06/06-products-3-Monetization.jpg?imageView2/0/format/webp/interlace/1/q/75" width="900"/>
 
 ## 设计
 
@@ -43,7 +43,7 @@ title: 06-躺平
 
 报告列举了 2023 年 logo 设计中常见的几种视觉风格，文章还提到了对可持续性和环保主题的关注，以及增强现实和虚拟现实等技术在设计中的应用。  
 
-<img src="https://pmfeeds.bearman.xyz/weekly/06/06-design-1-logo.png" width="900"/>
+<img src="https://pmfeeds.bearman.xyz/weekly/06/06-design-1-logo.png?imageView2/0/format/webp/interlace/1/q/75" width="900"/>
 
 **2.这个夏天的快乐秘诀：“多巴胺色彩搭配”**  
 
@@ -51,7 +51,7 @@ title: 06-躺平
 
 介绍了多巴胺穿搭这一时尚新风尚，通过高明度色彩、丰富夸张的印花图案和造型等方式，刺激人体分泌多巴胺，产生愉悦快感。  
 
-<img src="https://pmfeeds.bearman.xyz/weekly/06/06-design-2-dba.png" width="900"/>
+<img src="https://pmfeeds.bearman.xyz/weekly/06/06-design-2-dba.png?imageView2/0/format/webp/interlace/1/q/75" width="900"/>
 
 **3.Apple的Spatial UI是什么**
 
@@ -59,7 +59,7 @@ title: 06-躺平
 
 苹果的Vision Pro改变了游戏规则！它是UI设计的一个全新的维度。设计师可以解锁一个充满可能性的宇宙，并为用户创造令人惊叹的体验。  
 
-<img src="https://pmfeeds.bearman.xyz/weekly/06/06-design-3-spatial.png" width="900"/>
+<img src="https://pmfeeds.bearman.xyz/weekly/06/06-design-3-spatial.png?imageView2/0/format/webp/interlace/1/q/75" width="900"/>
 
 ## 技术前沿
 
@@ -76,7 +76,7 @@ title: 06-躺平
 之前在看到有朋友分享「AI 艺术二维码」的方案，不过比较少有教你一步一步用 Stable Diffusion 来弄一个的，很简单使用，但是真有趣，想折腾的可以玩玩看。
 PS:不过在这两周，AI艺术二维码的小项目出镜频率非常之高，过度的设计会让人产生“买椟还珠”的错觉，识别度是否会降低，是否真的提高了打开率（特别是在新潮劲过了之后）？  
 
-<img src="https://pmfeeds.bearman.xyz/weekly/06/06-develop-2-qrcode.png" width="900"/>
+<img src="https://pmfeeds.bearman.xyz/weekly/06/06-develop-2-qrcode.png?imageView2/0/format/webp/interlace/1/q/75" width="900"/>
 
 **3.内存分配如何工作**
 
@@ -92,7 +92,7 @@ PS:不过在这两周，AI艺术二维码的小项目出镜频率非常之高，
 
 基于AI智能填充，将照片裁剪为任何图像格式。  
 
-<img src="https://pmfeeds.bearman.xyz/weekly/06/06-tools-1-clipdrop.png" width="900"/>  
+<img src="https://pmfeeds.bearman.xyz/weekly/06/06-tools-1-clipdrop.png?imageView2/0/format/webp/interlace/1/q/75" width="900"/>  
 
 **2.AI美化二维码的一些服务**
 
@@ -101,7 +101,7 @@ PS:不过在这两周，AI艺术二维码的小项目出镜频率非常之高，
 [cog-visual-qr](https://replicate.com/dannypostma/cog-visual-qr)  
 [getQR.AI](https://replicate.com/dannypostma/cog-visual-qr)  
 
-<img src="https://pmfeeds.bearman.xyz/weekly/06/06-tools-2-qrcode.png" width="900"/>  
+<img src="https://pmfeeds.bearman.xyz/weekly/06/06-tools-2-qrcode.png?imageView2/0/format/webp/interlace/1/q/75" width="900"/>  
 
 **3.Flash保存计划**  
 
@@ -109,4 +109,4 @@ PS:不过在这两周，AI艺术二维码的小项目出镜频率非常之高，
 
 看到一个「Flash 保存计划」，将小时候玩的网页游戏基本上都给收藏起来了，比如说黄金矿工、合金弹头、拳皇，点击进去就是当时那个感觉，怀旧爱好者可以用 PC 看看。
 
-<img src="https://pmfeeds.bearman.xyz/weekly/06/06-tools-3-flash.jpg" width="900"/>  
+<img src="https://pmfeeds.bearman.xyz/weekly/06/06-tools-3-flash.jpg?imageView2/0/format/webp/interlace/1/q/75" width="900"/>  
