--- a/src/pages/posts/07-星空.md
+++ b/src/pages/posts/07-星空.md
@@ -3,7 +3,7 @@ layout: ../../layouts/post.astro
 desc: 图片微软最新游戏《星空》的宣传图，最近才稍微有点时间去补了下发布会，游戏挺不错的，感觉可以预定年度最佳游戏了，可惜我没有xbox呀。    
 pic: https://pmfeeds.bearman.xyz/weekly/07/07-cover.png?imageView2/0/format/webp/interlace/1/q/75
 date: 2023/07/03
-next_page: false
+next_page: 08-斑驳陆离
 last_page: 06-躺平
 title: 07-星空
 ---
