--- a/src/pages/posts/08-斑驳陆离.md
+++ b/src/pages/posts/08-斑驳陆离.md
@@ -79,7 +79,7 @@ DragGAN 是一个直观的图像编辑工具，用户只需要控制图像中的
 
 大漠根据 Chrome 开发者博客上的一篇 What's new in CSS and UI: I/O 2023 Edition 文章写得个人视角理解的文章。  
 
-<img src="https://pmfeeds.bearman.xyz/weekly/08/08-develop-2-css?imageView2/0/format/webp/interlace/1/q/75" width="900"/>  
+<img src="https://pmfeeds.bearman.xyz/weekly/08/08-develop-2-css.png?imageView2/0/format/webp/interlace/1/q/75" width="900"/>  
 
 **3.现代的图片展示方式**  
 
@@ -87,7 +87,7 @@ DragGAN 是一个直观的图像编辑工具，用户只需要控制图像中的
 
 主要讲 <img srcset> 属性的一些妙用，案例比较详细，值得一看。
 
-<img src="https://pmfeeds.bearman.xyz/weekly/08/08-develop-3-pic?imageView2/0/format/webp/interlace/1/q/75" width="900"/> 
+<img src="https://pmfeeds.bearman.xyz/weekly/08/08-develop-3-pic.jpg?imageView2/0/format/webp/interlace/1/q/75" width="900"/> 
 
 ## 顺手工具
 
