--- a/src/pages/posts/08-斑驳陆离.md
+++ b/src/pages/posts/08-斑驳陆离.md
@@ -3,7 +3,7 @@ layout: ../../layouts/post.astro
 desc: 图片摄于雨中的外滩，那雨水与玻璃交织折射出来的斑驳，即便美轮美奂，也并非原本的样貌。    
 pic: https://pmfeeds.bearman.xyz/weekly/08/08-cover.jpg?imageView2/0/format/webp/interlace/1/q/75
 date: 2023/07/10
-next_page: false
+next_page: 09-F*#K,PowerPoint
 last_page: 07-星空
 title: 08-斑驳陆离
 ---
