--- a/src/pages/posts/10-落日晚霞.md
+++ b/src/pages/posts/10-落日晚霞.md
@@ -3,7 +3,7 @@ layout: ../../layouts/post.astro
 desc: 图转自朋友的圈，落日晚霞，真的美!    
 pic: https://pmfeeds.bearman.xyz/weekly/10/10-cover.jpg?imageView2/0/format/webp/interlace/1/q/75
 date: 2023/07/24
-next_page: false
+next_page: 11-欲哭无泪
 last_page: 09-FuckPowerPoint
 title: 10-落日晚霞
 ---
