--- a/src/pages/posts/11-欲哭无泪.md
+++ b/src/pages/posts/11-欲哭无泪.md
@@ -62,7 +62,7 @@ title: 11-欲哭无泪
 
 首页做的细节。  
 
-<img src="https://pmfeeds.bearman.xyz/weekly/11/11-design-3-index.jpg?imageView2/0/format/webp/interlace/1/q/75" width="900"/>  
+<img src="https://pmfeeds.bearman.xyz/weekly/11/11-design-3-index.png?imageView2/0/format/webp/interlace/1/q/75" width="900"/>  
 
 ## 技术前沿  
 
