--- a/src/pages/posts/12-艳绝天下.md
+++ b/src/pages/posts/12-艳绝天下.md
@@ -38,7 +38,7 @@ title: 12-艳绝天下
 
 这里谈到了两项基本原则：1.让用户呆的时间更久；2.让用户在单个生命周期内支付更多的费用。    
 
-<img src="https://pmfeeds.bearman.xyz/weekly/12/12-products-3-price.jpg?imageView2/0/format/webp/interlace/1/q/75" width="900"/>  
+<img src="https://pmfeeds.bearman.xyz/weekly/12/12-products-3-price.png?imageView2/0/format/webp/interlace/1/q/75" width="900"/>  
 
 ## 设计阅读  
 
