--- a/src/pages/posts/12-艳绝天下.md
+++ b/src/pages/posts/12-艳绝天下.md
@@ -3,7 +3,7 @@ layout: ../../layouts/post.astro
 desc: 图出自《火凤燎原》动画截图，”小孟，你若换上女装，必定艳绝天下！“孟公公的颜值属实是逆天啊。    
 pic: https://pmfeeds.bearman.xyz/weekly/12/12-cover.jpeg?imageView2/0/format/webp/interlace/1/q/75
 date: 2023/08/07
-next_page: false
+next_page: 13-深夜独行
 last_page: 11-欲哭无泪
 title: 12-艳绝天下
 ---
