--- a/src/pages/posts/13-深夜独行.md
+++ b/src/pages/posts/13-深夜独行.md
@@ -3,7 +3,7 @@ layout: ../../layouts/post.astro
 desc: 图摄于无数个加班的夜晚，长长的马路上无论是人还是车都逐渐稀少，我们还在前行，不要忘记你的梦想，你的目标以及你的陪伴。    
 pic: https://pmfeeds.bearman.xyz/weekly/13/13-cover.jpg?imageView2/0/format/webp/interlace/1/q/75
 date: 2023/08/14
-next_page: false
+next_page: 14-还是数学
 last_page: 12-艳绝天下
 title: 13-深夜独行
 ---
