--- a/src/pages/posts/15-井然有序.md
+++ b/src/pages/posts/15-井然有序.md
@@ -3,7 +3,7 @@ layout: ../../layouts/post.astro
 desc: 图来自看客的公众号推文《县城炒币青年：血亏血亏欠贷13万，又回工地还债了》。外卖小哥拍下的照片，他觉得照片里的人们像蚂蚁一样“各自忙碌又井然有序”。    
 pic: https://pmfeeds.bearman.xyz/weekly/15/15-cover.jpeg?imageView2/0/format/webp/interlace/1/q/75
 date: 2023/08/28
-next_page: false
+next_page: 16-咖啡时间
 last_page: 14-还是数学
 title: 15-井然有序
 ---
