--- a/src/pages/posts/16-咖啡时间.md
+++ b/src/pages/posts/16-咖啡时间.md
@@ -3,7 +3,7 @@ layout: ../../layouts/post.astro
 desc: 图来自Midjourney生成，吟唱语:**8-biternity construction coffee break, tectonic jupiter's atmosphere --v 5.2 --c 55 --s 255 --video --no vignette, depth of field**。    
 pic: https://pmfeeds.bearman.xyz/weekly/16/16-cover.png?imageView2/0/format/webp/interlace/1/q/75
 date: 2023/09/04
-next_page: false
+next_page: 17-出去走走
 last_page: 15-井然有序
 title: 16-咖啡时间
 ---
